freesia/k8s/apps/prom-stack-v3/thanos-rule/service-grpc.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-rule-grpc
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: rule

spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 10901
      protocol: TCP
      targetPort: grpc
      name: grpc
  selector:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: rule
